apps/stirling-pdf/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-pdf
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: stirling-pdf.yuandrk.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stirling-pdf
            port:
              number: 8080
